More verbosity in admin for models, some documentation and template fixes.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{% block title%}Page Name{% endblock %}</title>
+  <title>{% block title%}{% endblock %} - Titus Soporan</title>
   {% block metadata %}
   <meta name="description" content="">
   <meta name="author" content="Titus Soporan">
