--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -1,1 +1,9 @@
 {% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block main %}
+<div id="main">
+
+</div>
+{% endblock main %}
