--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   {% block styles %}
-  <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css?v=2">
+  <link rel="stylesheet" type="text/css" href="{{MEDIA_URL }}css/style.css?v=2">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Tangerine">
+
   {% endblock styles %}  
   <link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.ico">
   <link rel="apple-touch-icon" href="{{ MEDIA_URL }}apple-touch-icon.png">
@@ -34,11 +36,17 @@
   <div id="container">
     {% block header %}
     <header>
-
+        <h1><a href="{% url index %}">tsoporan.com</a></h1>
+        <nav>
+            <ul>
+                <li><a href="{% url about %}">about</a></li>
+                <li><a href="{% url work %}">work</a></li>
+                <li><a href="{% url contact %}">contact</a></li>
+            </ul>
+        </nav>
     </header>
     {% endblock header %}
     
-
     {% block main %}
     <div id="main">
 
@@ -54,7 +62,7 @@
 
 
   {% block js %}
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ MEDIA_URL }}js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
   {% endblock js %}
   
