Basic layout and styles.

--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -2,8 +2,13 @@
 
 {% block title %}Home{% endblock %}
 
+{% block body_class %}home{% endblock %}
+
 {% block main %}
 <div id="main">
+    <h2> Heading/Intro </h2>
 
+    <p> Showcase projects </p>
 </div>
 {% endblock main %}
+
