--- a/media/css/style.css
+++ b/media/css/style.css
@@ -85,20 +85,68 @@ button {  width: auto; overflow: visible; }
  /* Primary Styles
     Author: Titus Soporan 
  */
-
-header h1 {
-    font-family: "Tangerine";
+a {}
+a:hover {}
+body {
+    background: #000;
+    height: 100%;
+    width: 100%;
+    margin-top: 20px;
+}
+#container {
+    margin: 20px auto;
+    padding: 20px;
+    height: 100%;
+    width: 80%;
+    background: #fff;
+    overflow: hidden;
 }
 
-
-
-
-
-
-
-
-
-
+header {
+    position: relative;
+}
+header h1 {
+    font-family: "Droid Sans", sans-serif;
+    font-size: 48px;
+    float: left;
+    position: absolute;
+    top: 0;
+    left: -20px;
+}
+h1 a { 
+    text-decoration: none;
+}
+header nav ul {
+    float: right;
+    margin: 25px 0;
+}
+header nav ul li{
+    display: inline;
+    text-align: center;
+}
+header nav ul li a {
+    background: #000;
+    padding: 5px;
+    text-decoration: none;
+}
+header nav ul li a:hover {
+    background: #ffa459;
+}
+header span {
+    background: #000;
+    padding: 3px;
+    color: #D92727;
+}
+#main {
+    background: #000;
+    height: 100px;
+    clear: both;
+}
+footer {
+    margin-top: 20px;
+    background: #000;
+    height: 50px;
+}
 @media all and (orientation:portrait) { 
   
 }
