--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
   <div id="container">
     {% block header %}
     <header>
-        <h1><a href="{% url index %}">tsoporan.com</a></h1>
+        <h1><a href="{% url index %}" title="Titus Soporan"><span>ts</span>oporan</a></h1>
         <nav>
             <ul>
                 <li><a href="{% url about %}">about</a></li>
@@ -48,14 +48,12 @@
     {% endblock header %}
     
     {% block main %}
-    <div id="main">
-
-    </div>
+    <div id="main"></div>
     {% endblock main %}
     
     {% block footer %}
     <footer>
-
+        <p>Footer stuff.</p>        
     </footer>
     {% endblock footer %}
   </div> <!-- end of #container -->
