Added remainder of templates with base structure.

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
 
   <title>{% block title%}{% endblock %} - Titus Soporan</title>
   {% block metadata %}
-  <meta name="description" content="">
+  <meta name="description" content="The online portfolio of web developer Titus Soporan">
+  <meta name="keywords" content="web developer,Titus Soporan,Soporan,django,web,web development,web site,python,css,html,javascript">
   <meta name="author" content="Titus Soporan">
   {% endblock metadata %}  
   
@@ -53,7 +54,6 @@
     
     {% block footer %}
     <footer>
-        <p>Footer stuff.</p>        
     </footer>
     {% endblock footer %}
   </div> <!-- end of #container -->
