--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -6,15 +6,34 @@
 
 {% block main %}
 <div id="main">
-    <h2> Heading/Intro </h2>
+    <section id="intro">
+        <h2> Intro. </h2>
+    </section>
 
-    <p> Showcase projects </p>
+    <section id="about">
+        <h2> About. </h2>
+    </section>
 
-    <ul id="projects">
-    {% for p in projects %}
+    <section id="work">
+        <h2> Work. </h2>
+
+        <ul id="projects">
+        {% for p in projects %}
         <li>{{ p }}</li>
-    {% endfor %}
-    </ul>
+        {% endfor %}
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2> Contact. </h2>
+    </section>
 </div>
 {% endblock main %}
+
+{% block footer %}
+    <footer>
+    Footer and other interesting stuff goes here.
+    </footer>
+{% endblock footer %}
+
 
