Akismet filtering working, form in template.

--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -33,6 +33,11 @@
 {% block footer %}
     <footer>
     Footer and other interesting stuff goes here.
+
+    <form action="" method="POST">{% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Send">
+    </form>
     </footer>
 {% endblock footer %}
 
