--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,6 @@
 {% block body %}
 <body class="{% block body_class %}index{% endblock %}">
 
-  <div id="container">
     {% block header %}
     <header>
         <nav>
@@ -53,10 +52,8 @@
     {% endblock main %}
     
     {% block footer %}
-    <footer>
-    </footer>
+    <footer></footer>
     {% endblock footer %}
-  </div> <!-- end of #container -->
 
 
   {% block js %}
