--- a/templates/base.html
+++ b/templates/base.html
@@ -38,9 +38,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="{% url about %}">about</a></li>
-                <li><a href="{% url work %}">work</a></li>
-                <li><a href="{% url contact %}">contact</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#work">work</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
         <h1><a href="{% url index %}" title="Titus Soporan"><span>ts</span>oporan</a></h1>
@@ -71,12 +71,6 @@
     <script src="{{ MEDIA_URL }}js/libs/dd_belatedpng.js"></script>
     <script> DD_belatedPNG.fix('img, .png_bg'); </script>
   <![endif]-->
-
-  <!-- yui profiler and profileviewer - remove for production -->
-  <script src="{{ MEDIA_URL }}js/profiling/yahoo-profiling.min.js"></script>
-  <script src="{{ MEDIA_URL }}js/profiling/config.js"></script>
-  <!-- end profiling code -->
-
 
   <!-- change the UA-XXXXX-X to be your site's ID -->
   <script>
