--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -2,6 +2,12 @@
 
 {% block title %}Home{% endblock %}
 
+{% block styles %}
+    {{ block.super }}
+    <link rel="stylsheet" type="text/css" href="{{ MEDIA_URL }}css/nivo-slider.css">
+
+{% endblock styles %}
+
 {% block body_class %}home{% endblock %}
 
 {% load thumbnail %}
@@ -18,7 +24,6 @@
 
     <section id="work">
         <h2> Work </h2>
-
         <ul id="projects">
         {% for p in projects %}
             <li class="project">
@@ -26,18 +31,12 @@
                 <div class="slideshow">
                 {% if p.resources.all %}
                     {% for r in p.resources.all %}
-                        {% if r.resource and r.type == 'img' %}
-                            {% thumbnail r.resource "250x250" crop="center" as im %}
-                            <img src="{{ im.url }}" height="{{ im.height }}" width="{{ im.width }}">
-                            {% endthumbnail %}
-                        
-                        {% else %}
-                            <img class="noimg" src="" height="250" width="250">
-                        {% endif %}
+                        {% thumbnail r.resource "250x250" crop="center" as im %}
+                        <img src="{{ im.url }}">
+                        {% endthumbnail %}
                     {% endfor %}
                 {% endif %}
                 </div>
-    
 
                 <div class="info">
                 <h3>{{ p.name }}</h3>
@@ -80,7 +79,8 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{{ MEDIA_URL }}js/libs/easing.js"></script>
+    <script src="{{ MEDIA_URL }}js/libs/jquery.nivo.slider.pack.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}js/libs/easing.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             if ($('.errorlist').length) {
@@ -97,6 +97,9 @@
                 $('body, html').animate({scrollTop: offset.top - 100}, 1000, 'easeOutBack');
                 return false;
             });
+        
+            //$('div.slideshow').nivoSlider();
+        
         });
     </script>
 {% endblock js %}
