--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                 <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
-        <h1><a href="{% url index %}" title="Titus Soporan">Titus Soporan</a></h1>
+        <h1 id="logo"><a href="{% url index %}" title="Titus Soporan">Titus Soporan</a></h1>
     </header>
     {% endblock header %}
     
