--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -3,19 +3,20 @@
 {% block title %}Home{% endblock %}
 
 {% block styles %}
-    {{ block.super }}
-    <link rel="stylsheet" type="text/css" href="{{ MEDIA_URL }}css/nivo-slider.css">
+  {{ block.super }}
+  <link rel="stylsheet" type="text/css" href="{{ MEDIA_URL }}css/thickbox.css">
 
 {% endblock styles %}
 
 {% block body_class %}home{% endblock %}
 
 {% load thumbnail %}
+{% load portfolio_tags %}
 
 {% block main %}
 <div id="main">
     <section id="intro">
-        <h3> I am a <span>web developer</span>, zombie wrangler, and general software mercernary with the power of both Superman and Captain Planet embedded in my fingertips.</h3>
+        <h3> I am a <span>web developer</span>, zombie wrangler, and general software mercernary. And, I like <span>ponies</span>.</h3>
     </section>
 
     <section id="about">
@@ -29,11 +30,11 @@
             <li class="project">
                 
                 <div class="slideshow">
-                {% if p.resources.all %}
-                    {% for r in p.resources.all %}
-                        <a href="" title=""><img src="{{ r.resource.url }}"></a>
-                    {% endfor %}
-                {% endif %}
+                {% get_resource p 'logo' as logo %}
+                {% get_resource p 'screenshot' as screen %}
+                {% thumbnail screen.resource "1000" crop="center" as im %}
+                    <a class="thickbox" href="{{ im.url }}"><img src="{{ logo.resource.url }}"></a>
+                {% endthumbnail %}
                 </div>
 
                 <div class="info">
@@ -42,7 +43,6 @@
                 
                 <p class="view"><span>View</span>: {{ p.url|urlizetrunc:15 }} </p>
                 <p class="desc">{{ p.description|truncatewords:25 }}</p>
-                {% for r in p.resource.sall %} {% if r.type != "img" %} {{ r }} {% endif %} {% endfor %}</p>
                 <ul class="skills">
                     {% for s in p.skills.all %}
                         <li class="skill"> {{ s }} </li>
@@ -77,8 +77,8 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{{ MEDIA_URL }}js/libs/jquery.nivo.slider.pack.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/libs/easing.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}js/libs/thickbox.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             if ($('.errorlist').length) {
@@ -95,9 +95,7 @@
                 $('body, html').animate({scrollTop: offset.top - 100}, 1000, 'easeOutBack');
                 return false;
             });
-        
-            //$('div.slideshow').nivoSlider();
-        
+       
         });
     </script>
 {% endblock js %}
