--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{% block title%}{% endblock %} - Titus Soporan</title>
+  <title>Titus Soporan | {% block title %}{% endblock %}</title>
   {% block metadata %}
-  <meta name="description" content="The online portfolio of web developer Titus Soporan">
+  <meta name="description" content="tsoporan.com is the online portfolio of web developer Titus Soporan.">
   <meta name="keywords" content="web developer,Titus Soporan,Soporan,django,web,web development,web site,python,css,html,javascript">
   <meta name="author" content="Titus Soporan">
   {% endblock metadata %}  
@@ -24,7 +24,7 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Tangerine">
 
   {% endblock styles %}  
-  <link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.ico">
+  <link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png">
   <link rel="apple-touch-icon" href="{{ MEDIA_URL }}apple-touch-icon.png">
 
   <script src="{{ MEDIA_URL }}js/libs/modernizr-1.6.min.js"></script>
