--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -64,10 +64,19 @@
         <div class="contact-info">
             <h3>Let's get in touch.</h3>
             <p>
-                If you'd like to chat about a project or just say hi, please use the contact form .
+                I'd love to hear from you, whether it is to talk about your project or just to say hi. 
+                If you're contacting me for development work please include the details, such as technical requirements, 
+                budget, and other relevant information.
+            </p> 
 
-                You can also contact me via these methods:
-             </p>
+            <p>
+                I can also be reached through these methods:
+            </p>
+
+            <address>     
+                <p><strong>Phone</strong>: 519-570-9888</p>
+                <p><strong>E-mail</strong>: <a href="mailto:tsoporan@gmail.com">tsoporan@gmail.com</a></p>
+            </address>
         </div>
         
         <div class="contact-form">
