Added forkme github ribbon, custom, moved images to proper dir.

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Tangerine">
 
   {% endblock styles %}  
-  <link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png">
-  <link rel="apple-touch-icon" href="{{ MEDIA_URL }}apple-touch-icon.png">
+  <link rel="shortcut icon" href="{{ MEDIA_URL }}images/favicon.png">
+  <link rel="apple-touch-icon" href="{{ MEDIA_URL }}images/apple-touch-icon.png">
 
   <script src="{{ MEDIA_URL }}js/libs/modernizr-1.6.min.js"></script>
 </head>
