--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -119,6 +119,11 @@
     <a href="http://djangoproject.com"><img src="http://media.djangoproject.com/img/badges/djangopowered126x54_grey.gif" border="0" alt="Powered by Django" title="Powered by Django"></a>
    <p> {% now "Y" %} <a href="http://tsoporan.com" title="Titus Soporan - Web Develper">tsoporan.com</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>. </p>
     </footer>
+
+    <a href="http://github.com/tsoporan">
+    <img style="position: fixed; bottom: 0; left: 0; border: 0; z-index:9999" src="{{ MEDIA_URL }}images/forkmecust.png" alt="Fork me on GitHub">
+    </a>
+
 {% endblock footer %}
 
 
